fixed overflowing in mobile cube carousel

--- a/src/components/cubeCarousel/cubeStyle.css
+++ b/src/components/cubeCarousel/cubeStyle.css
@@ -1,6 +1,5 @@
 .cube {
   width: 75%;
-  height: 70%;
   max-width: 340px;
 }
 
